# neural-reachability-manifolds

./: .gitignore  pyproject.toml
data_creation/: create_data.py  dataset.py  estimate_workspace.py  mdh_generation.py  r3_cell_lookup.py  so3_cell_lookup.py  so3_cells.csv
data_generation/: autotune_batch_size.py  conversion.py  estimate_workspace.py  mdh_generation.py  r3_cell_lookup.pt  r3_cells.csv  r3_cells.py  robotics.py  so3_cells.pt  validated_data_generation.py
data_sampling/: autotune_batch_size.py  dataset.py  estimate_workspace.py  orientation_representations.py  r3.py  representations.py  robotics.py  sample.py  sample_capability_map.py  sample_data.py  sample_mdh.py  sample_morph.py  se3.py
data_sampling/se3_cells/: __init__.py  create_r3_cells.py  (+9 more)
model/: __init__.py  decoder.py  encoder.py  layers.py
neural-capability-maps/: dataset.py  evaluation.py  hyperparameter.py  model.py  train.py  visualise_workspace.ipynb
neural_capability_maps/: create_dataset.py  dataset.py  evaluation.py  hyperparameter.py  logger.py  model.py  train.py  validate.py  visualisation.py
nrm/: create_dataset.py  hyperparameter.py  logger.py  train.py  validate.py  visualisation.py
paper archive/: data_validity.py
paper_archive/: data_validity.py
scripts/: evaluation.py  hyperparameter.py  train.py
tests/: benchmark.py  eval_sampling.ipynb  test_analytical_inverse_kinematics.py  test_inverse_kinematics.py  test_lookup.py  test_r3.py  test_representations.py  test_sample_morph.py  test_sampling.py  test_se3.py  test_so3.py  visualisation.py  visualise_robots.ipynb
(+33 files in other folders)
