[project]
name = "nf-capa"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sympy>=1.13.1",
    "torch>=2.9.0",
    "tqdm>=4.66.5",
    "wandb>=0.18.5",
    "torcheval>=0.0.7",
    "jaxtyping>=0.3.2",
    "optuna>=0.4.5",
    "beartype>=0.22.3",
    "zarr>=3.1.3",
    "kaleido>=1.1.0",
]
