[project]
name = "nf-capa"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.0",
    "tqdm>=4.66.5",
    "wandb>=0.18.5",
    "jaxtyping>=0.3.2",
    "optuna>=0.4.5",
    "beartype>=0.22.3",
    "zarr>=3.1.3",
    "kaleido>=1.1.0",
    "scipy>=1.17.0rc1",
    "eaik>=1.2.1",
    "tabulate>=0.9.0",
    "faiss>=1.13.0" # Remove later only to validate the discretisation
]
